--- a/assets/styles/elements/_document.scss
+++ b/assets/styles/elements/_document.scss
@@ -3,5 +3,6 @@ html {
 }
 
 body {
-    background: var(--primary-color);
+    background: var(--secondary-color);
+    font-family: "var(--font-body)";
 }
