--- a/assets/styles/components/_card.scss
+++ b/assets/styles/components/_card.scss
@@ -12,7 +12,7 @@
   display: flex;
   flex-direction: column;
   font-family: var(--font-body);
-  min-width:calc(100% - (var(--items)-1) + var(--gap-1));
+  // min-width:calc(100% - (var(--items)-1) + var(--gap-1));
 
   /* justify-content: center; */
 }
@@ -41,8 +41,12 @@ height: 50px;
   gap: 1rem;
   justify-content: space-between;
   padding:  0 1rem;
+  justify-items: center;
 }
-
+.like-card{
+  justify-self: center;
+  text-align: center;
+}
 .category-card {
  margin: 0.5rem;
   border-radius: 15px;
@@ -57,5 +61,10 @@ height: 50px;
    }
 .like-card{
    height: 50px;
+   padding-top: 10px;
 
 }
+
+
+
+.card-container {}
