--- a/assets/styles/layout/_filtre.scss
+++ b/assets/styles/layout/_filtre.scss
@@ -1,6 +1,6 @@
-.filtre{
-display: flex;
-flex-direction: row;
-gap: 1rem;
-
+.filtre {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  justify-content: center;
 }
