modifications of the config

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -6,6 +6,7 @@
 @import "settings/config.colors";
 @import "settings/config.variables";
 @import "settings/config.spacings";
+@import "settings/config.border";
 
 /* Forms */
 @import "forms/buttons";
