--- a/assets/styles/settings/_config.colors.scss
+++ b/assets/styles/settings/_config.colors.scss
@@ -3,3 +3,11 @@
   --secondary-color: #fff;
   --third-color: #000;
 }
+
+
+:root {
+  /* catégory */
+  --color-b: rgb(50, 173, 230);
+  --color-r: rgb(216, 22, 22);
+  --color-g: rgb(61, 216, 22);
+}
