--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -15,9 +15,7 @@
 /* Layout */
 @import "layout/header";
 @import "layout/filtre";
+@import "layout/headerProfil";
 
 /* Components */
 @import "components/card";
-
-
-
