--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -9,9 +9,16 @@
     justify-content: space-between;
   }
 
-  // &_logo > img {
-  //   width: 20%;
-  // }
+  &_logo > a {
+    text-decoration: none;
+    font-family: var(--font-title);
+    font-size: var(--font-size-lg);
+    text-shadow:
+    1px 1px 2px orange,
+    0 0 1em white,
+    0 0 0.2em orange; ;
+    color: #EFDCAB;
+  }
 
   &_searchbar {
     margin-top: var(--padding-md);
@@ -37,13 +44,16 @@
     }
   }
 
-  &_profile > img > a {
-    width: 100px;
+  &_profile > a > img {
+    width: 50px;
     border-radius: 50%;
     box-shadow: var(--box-shadow);
   }
+  &_profile > a {
+    color: var(--third-color);
+    padding-bottom: 10px;
+  }
 
-  
   &_bottom {
     margin-top: var(--padding-sm);
 
@@ -58,73 +68,3 @@
     }
   }
 }
-
-// .header_container {
-//     width: 100%;
-//     height: var(--height-nav);
-//     padding: 0 1rem 0 1rem 0;
-//     background-color: var(--primary-color);
-//     color: var(--secondary-color);
-//     text-align: center;
-//     font-size: 2rem;
-//     font-weight: bold;
-//     box-shadow: var(--box-shadow);
-//     justify-content: center;
-//     display: flex;
-//     flex-direction: row;
-
-//   }
-
-//   .container {
-//     margin: 1rem;
-//     position: relative;
-//   }
-
-//   h2 {
-//     margin: 2rem;
-//     font-size: 20px;
-//   }
-//   .searchbar {
-//     justify-content: center;
-//     font-size: 2.4rem;
-//     width: 25rem;
-//     height: 1rem;
-//     border: none;
-//     outline: none;
-//     border-radius: 10rem;
-//     padding: 1.5rem;
-//     transition: all 0.1s;
-//     transition-delay: 0.1s;
-//   }
-//   .searchbar:hover {
-//     width: 26rem;
-//     height: 1.5rem;
-//   }
-//   .button {
-//     height: 2rem;
-//     position: absolute;
-//     top: 0.5rem;
-//     right: 1rem;
-//     transition: all 0.1s;
-//     transition-delay: 0.1s;
-//   }
-//   .button:hover {
-//     cursor: pointer;
-//   }
-//   .searchbar:hover + .button {
-//     height: 2.5rem;
-//     top: 0.5rem;
-//     right: 0;
-//   }
-//   .searchbar::placeholder {
-//     opacity: 0.3;
-//   }
-
-//   .btn-connexion {
-//     height: 50%;
-//     border-radius: 1.875rem;
-//     justify-self: center;
-//     margin-top: 1rem;
-//     border: none;
-//     padding: 0.5rem 0.5rem 0.5rem 0.5rem;
-//   }
