--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -16,6 +16,11 @@
 @import "layout/header";
 @import "layout/filtre";
 @import "layout/headerProfil";
-
+@import "layout/formContact";
 /* Components */
 @import "components/card";
+ 
+
+/* Pages*/
+
+@import "pages/contact";                              
