--- a/assets/styles/layout/_formContact.scss
+++ b/assets/styles/layout/_formContact.scss
@@ -1,12 +1,13 @@
 .Form {
   align-items: center;
   margin: auto;
-  height: 400px;
+  height: fit-content;
   max-width: 400px;
   border: 1px solid rgba(187, 186, 186, 0.699);
   padding: 30px;
   border-radius: 30px;
   box-shadow: var(--box-shadow);
+
   &_contactsMe {
     display: flex;
     flex-direction: column;
@@ -20,6 +21,24 @@
     justify-content: start;
   }
   input {
-    border-bottom: 1px solid black;
+    padding: 5px;
+    border: 1px solid rgba(187, 186, 186, 0.699);
+    border-radius: 15px;
+    box-shadow: var(--box-shadow);
   }
+  #message {
+    border-radius: 15px;
+    border: 1px solid rgba(187, 186, 186, 0.699);
+    padding: 10px;
+    box-shadow: var(--box-shadow);
+  }
+  // &_objetSelect {
+  //   border-radius: 15px;
+  //   border: 1px solid rgba(187, 186, 186, 0.699);
+  //   padding: 10px;
+  //   box-shadow: var(--box-shadow);
+  // }
+  //Lui il ne veut pas la liste de objet sujet  et 
+  // question est ce realment utile le nom dans  ce genre de form
+  
 }
