--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -23,4 +23,5 @@
 
 /* Pages*/
 
-@import "pages/contact";                              
+@import "pages/contact";  
+@import "pages/_aPropos";                            
