--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -17,6 +17,7 @@
 @import "layout/filtre";
 @import "layout/headerProfil";
 @import "layout/formContact";
+@import "layout/popup";
 /* Components */
 @import "components/card";
 @import "components/carosel";
