--- a/assets/styles/components/_carosel.scss
+++ b/assets/styles/components/_carosel.scss
@@ -1,14 +1,14 @@
-.carosel{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 1rem;
-    margin: 0 auto;
-    padding: 2rem;
-    width: calc(100% - (var(--items)-1) + var(--gap-1));
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    scrollbar-width: none; /* Firefox */
-    
-}
+// .carosel {
+//   &_titre {
+//     font-size: 2rem;
+//     font-weight: 700;
+//     text-align: start;
+//     margin-bottom: 2rem;
+//   }
+//   &_container {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+
+//   }
+// }
