--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -19,3 +19,12 @@
 .formSubmit {
   border-color: var(--third-color);
 }
+
+.input {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin: 10px 0;
+  border-radius: 10px;
+}
+
