--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -14,6 +14,16 @@
     padding: 10px 15px;
     font-family: var(--font-body);
   }
+  &_formEvent {
+    align-items: center;
+    margin: auto;
+    border-radius: 10px;
+    border: none;
+    padding: 5px;
+    box-shadow: var(--box-shadow);
+    background-color: #fff;
+    width: 100%;
+  }
 }
 
 .formSubmit {
@@ -27,15 +37,14 @@
   margin: 10px 0;
   border-radius: 10px;
 
- &_photoPrincipal{
-  background-color: #f0f0f0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-  height: 300px;
-  border-radius: 15px;
-  padding: 10px;
-  box-shadow: var(--box-shadow);
- } 
+  &_photoPrincipal > input {
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    height: 300px;
+    border-radius: 15px;
+    padding: 10px;
+    box-shadow: var(--box-shadow);
+  }
 }
