--- a/assets/styles/pages/_eventAdd.scss
+++ b/assets/styles/pages/_eventAdd.scss
@@ -15,5 +15,43 @@
     margin: 20px 0;
     text-align: center;
   }
- 
+  &_form {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 80%;
+    height: 100%;
+    align-items: space-between;
+  }
+
+  &_input2 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: auto;
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+  }
+
+  &_input2 > input {
+    border: 1px solid var(--third-color);
+    border-radius: 15px;
+  }
+
+  &_title {
+    font-size: 2rem;
+    margin: 5px 0;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+  }
+  &_location {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin: 10px 0;
+    border-radius: 10px;
+  }
 }
