formulaire input css

--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -11,6 +11,7 @@
 /* Forms */
 @import "forms/buttons";
 @import "forms/controls";
+@import "forms/input";
 
 /* Layout */
 @import "layout/header";
