--- a/assets/styles/elements/_container.scss
+++ b/assets/styles/elements/_container.scss
@@ -16,9 +16,16 @@
   }
   &_eventAdd {
     display: flex;
-    
+    max-width: 900px;
+    margin: 0 auto;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    gap: 20px;
+  }
+  &_inputForm{
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
   }
 }
