--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -14,20 +14,29 @@
     padding: 10px 15px;
     font-family: var(--font-body);
   }
+
   &_formEvent {
-    align-items: center;
+    align-items: end;
     margin: auto;
     border-radius: 10px;
     border: none;
     padding: 5px;
     box-shadow: var(--box-shadow);
-    background-color: #fff;
+    background-color: var(--primary-color);
+    color: var(--third-color);
     width: 100%;
+  }
+  &_inputDate {
+    border: 1px solid var(--third-color);
+    border-radius: 15px;
+    font-size: 1rem;
+
   }
 }
 
 .formSubmit {
-  border-color: var(--third-color);
+  border: 1px solid var(--third-color);
+  opacity: 0.5;
 }
 
 .input {
@@ -37,14 +46,39 @@
   margin: 10px 0;
   border-radius: 10px;
 
-  &_photoPrincipal > input {
-    background-color: #f0f0f0;
-    display: flex;
-    justify-content: center;
-    margin: 0 auto;
-    height: 300px;
-    border-radius: 15px;
-    padding: 10px;
-    box-shadow: var(--box-shadow);
+  &_photoPrincipal > label {
+    border-bottom: 1px solid var(--third-color);
+    font-family: 600;
+    font-size: 1.5rem;
+    margin: 10px;
   }
+  &_photoPrincipal .filewrapper {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    margin: 10px 0;
+    height: 200px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: #f0f0f0;
+    border: 2px dashed #333;
+  }
+  &_photoPrincipal .filewrapper input[type="file"] {
+    opacity: 0;
+    position: absolute;
+    width: 50%;
+    // left: 0;
+    // right: 0;
+    // top: 0;
+    // bottom: 0;
+  }
+&_time{
+  width:80%;
+}
+ 
+&_location{
+  
+}
+
 }
