--- a/assets/styles/pages/_eventAdd.scss
+++ b/assets/styles/pages/_eventAdd.scss
@@ -18,21 +18,16 @@
   &_form {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    width: 80%;
-    height: 100%;
-    align-items: space-between;
+    gap: 40px;
+    justify-content: space-around;
+    align-items: center;
   }
 
   &_input2 {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin: auto;
     border-radius: 10px;
-    width: 100%;
-    height: 100%;
-    padding: 10px;
   }
 
   &_input2 > input {
@@ -41,17 +36,32 @@
   }
 
   &_title {
-    font-size: 2rem;
+    font-size: 1rem;
     margin: 5px 0;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-  }
-  &_location {
+    text-align: start;
     display: flex;
     flex-direction: column;
     gap: 10px;
-    margin: 10px 0;
-    border-radius: 10px;
   }
+  &_title > input {
+    border: 1px solid var(--third-color);
+    border-radius: 15px;
+    font-size: 1rem;
+  }
+  &_dates{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &_date{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+
+ 
+ 
 }
