--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -2,7 +2,7 @@
   background: #fff;
   border: 1px solid var(--primary-color);
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
-  padding: 10px 15px;
+  padding: 10px;
   font-size: 16px;
   border-radius: 999px;
 
@@ -30,7 +30,6 @@
     border: 1px solid var(--third-color);
     border-radius: 15px;
     font-size: 1rem;
-
   }
 }
 
@@ -46,6 +45,11 @@
   margin: 10px 0;
   border-radius: 10px;
 
+  &_photoPrincipal {
+    width: 300px;
+    height: 100%;
+  }
+
   &_photoPrincipal > label {
     border-bottom: 1px solid var(--third-color);
     font-family: 600;
@@ -58,27 +62,19 @@
     justify-content: center;
     gap: 10px;
     margin: 10px 0;
-    height: 200px;
+    height: 400px;
     width: 100%;
     border-radius: 10px;
     background-color: #f0f0f0;
-    border: 2px dashed #333;
+    border: 1px dashed var(--primary-color);
   }
   &_photoPrincipal .filewrapper input[type="file"] {
     opacity: 0;
     position: absolute;
     width: 50%;
-    // left: 0;
-    // right: 0;
-    // top: 0;
-    // bottom: 0;
   }
-&_time{
-  width:80%;
-}
- 
-&_location{
-  
-}
-
+  &_time {
+    width: 50%;
+    padding-left: 10px;
+  }
 }
