--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -12,6 +12,7 @@
 @import "forms/buttons";
 @import "forms/controls";
 @import "forms/input";
+@import "forms/seize";
 
 /* Layout */
 @import "layout/header";
