--- a/assets/styles/pages/_eventAdd.scss
+++ b/assets/styles/pages/_eventAdd.scss
@@ -17,7 +17,7 @@
   }
   &_form {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     gap: 40px;
     justify-content: space-around;
     align-items: center;
@@ -59,4 +59,12 @@
     font-size: 2rem;
     text-align: center;
   }
+  &_formContainer{
+    display: flex;
+    flex-direction: row ;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
+
 }
