--- a/assets/styles/elements/_container.scss
+++ b/assets/styles/elements/_container.scss
@@ -27,21 +27,27 @@
     flex-direction: row;
     gap: 5px;
   }
- &_Form{
-  display:flex;
-  flex-direction: row;
-  gap: 20px;
+  &_Form {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+  }
+  &_form {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+  }
 
- }
- &_box1{
-  width: 400px;
-  align-items: center;
-  margin: 0;
- }
- &_box2{
- 
-  align-items: center;
-  margin: 0;
- }
- 
+  &_box1 {
+    width: 400px;
+    align-items: center;
+    margin: 0;
+  }
+
+  &_box2 {
+    align-items: center;
+    margin: 0;
+  }
 }
