--- a/assets/styles/pages/_eventAdd.scss
+++ b/assets/styles/pages/_eventAdd.scss
@@ -59,12 +59,9 @@
     font-size: 2rem;
     text-align: center;
   }
-  &_formContainer{
-    display: flex;
-    flex-direction: row ;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
+
 
 }
+// #form2_hidden{
+
+// }
