--- a/assets/styles/elements/_container.scss
+++ b/assets/styles/elements/_container.scss
@@ -22,24 +22,19 @@
     flex-direction: column;
     gap: 20px;
   }
-  &_inputForm {
-    display: flex;
-    flex-direction: row;
-    gap: 5px;
-  }
-  &_Form {
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-  }
+
   &_form {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 20px;
   }
-
+  &_box {
+    display: flex;
+    flex-direction: column;
+    align-items: self-start;
+  width:  28rem;
+  }
   &_box1 {
     width: 400px;
     align-items: center;
@@ -49,5 +44,11 @@
   &_box2 {
     align-items: center;
     margin: 0;
+  }
+  &_page {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
   }
 }
