--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -5,14 +5,12 @@
   padding: 10px;
   font-size: 16px;
   border-radius: 999px;
-
-
-&_hidden{
+width: 100%;
+  &_hidden {
     display: none;
     border: none;
-    
   }
-  
+
   &_connexion {
     border-radius: 999px;
     border: var(--border-orange);
@@ -38,6 +36,9 @@
     border-radius: 15px;
     font-size: 1rem;
   }
+
+
+
 }
 
 .formSubmit {
@@ -45,40 +46,44 @@
   opacity: 0.5;
 }
 
-.input {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  margin: 10px 0;
-  border-radius: 10px;
+.box {
+  // Taille du container photo
 
-
-  &_photo > label {
+  label {
     border-bottom: 1px solid var(--third-color);
     font-family: 600;
     font-size: 1.5rem;
     margin: 10px;
   }
-  &_photo .filewrapper {
+  .filewrapper {
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 300px;
+    width: 300px;
     gap: 10px;
-    margin: 10px 0;
-    height: 400px;
-    width: 100%;
+    margin: 10px;
+
     border-radius: 10px;
     background-color: #f0f0f0;
     border: 1px dashed var(--primary-color);
   }
-  &_photo .filewrapper input[type="file"] {
+  .filewrapper input[type="file"] {
     opacity: 0;
     position: absolute;
     width: 50%;
   }
+}
+
+.input {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  border-radius: 10px;
+  
+
   &_time {
     width: 50%;
     padding-left: 10px;
   }
-
 }
