--- a/assets/styles/elements/_container.scss
+++ b/assets/styles/elements/_container.scss
@@ -1,7 +1,7 @@
 .container {
   padding-left: 30px;
   padding-right: 30px;
-  margin: 0 auto;
+  margin: auto;
 
   &_Logos {
     margin: 15px;
@@ -17,7 +17,7 @@
   &_eventAdd {
     display: flex;
     max-width: 900px;
-    margin: 20px auto;
+    margin: auto;
     justify-items: center;
     flex-direction: column;
     gap: 20px;
@@ -28,12 +28,18 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+    gap: 40px;
+    width: 100%;
+
+    margin: auto;
   }
   &_box {
     display: flex;
     flex-direction: column;
     align-items: self-start;
-  width:  28rem;
+    width: 100%;
+    height: 100%;
+    gap: 10px;
   }
   &_box1 {
     width: 400px;
@@ -42,13 +48,23 @@
   }
 
   &_box2 {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+  }
+  &_btn {
     align-items: center;
-    margin: 0;
+    margin: auto;
   }
   &_page {
     width: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
+  }
+    &_page_hidden {
+  display: none;
   }
 }
