--- a/assets/styles/forms/_buttons.scss
+++ b/assets/styles/forms/_buttons.scss
@@ -5,7 +5,8 @@
   padding: 10px;
   font-size: 16px;
   border-radius: 999px;
-width: 100%;
+  width: 100%;
+
   &_hidden {
     display: none;
     border: none;
@@ -20,25 +21,24 @@ width: 100%;
     font-family: var(--font-body);
   }
 
-  &_formEvent {
-    align-items: end;
-    margin: auto;
-    border-radius: 10px;
+  &_form {
+    align-items: center;
     border: none;
+    border-radius: 10px;
     padding: 5px;
     box-shadow: var(--box-shadow);
     background-color: var(--primary-color);
     color: var(--third-color);
-    width: 100%;
+    width: 70%;
+   margin: auto;
   }
-  &_inputDate {
-    border: 1px solid var(--third-color);
+  &_addDate {
+    border: 1px solid var(--primary-color);
+    background-color: var(--secondary-color);
+    box-shadow: var(--box-shadow);
     border-radius: 15px;
     font-size: 1rem;
   }
-
-
-
 }
 
 .formSubmit {
@@ -48,12 +48,12 @@ width: 100%;
 
 .box {
   // Taille du container photo
-
+// ! Je ne sais pas comment faire pour que mon border fit le contenu et no le conenant
   label {
-    border-bottom: 1px solid var(--third-color);
+    border-bottom: 1px solid var(--third-color); 
     font-family: 600;
-    font-size: 1.5rem;
-    margin: 10px;
+    font-size: 1.1rem;
+    margin: 5px;
   }
   .filewrapper {
     display: flex;
@@ -62,8 +62,7 @@ width: 100%;
     height: 300px;
     width: 300px;
     gap: 10px;
-    margin: 10px;
-
+    margin: auto;
     border-radius: 10px;
     background-color: #f0f0f0;
     border: 1px dashed var(--primary-color);
@@ -75,12 +74,13 @@ width: 100%;
   }
 }
 
+
+
 .input {
   display: flex;
   flex-direction: column;
   gap: 10px;
   border-radius: 10px;
-  
 
   &_time {
     width: 50%;
