--- a/assets/styles/elements/_container.scss
+++ b/assets/styles/elements/_container.scss
@@ -58,9 +58,9 @@
     margin: auto;
   }
   &_page {
-&:not(.active){
-  display: none;
-}
+    &:not(.active) {
+      display: none;
+    }
 
     width: 100%;
     display: flex;
@@ -68,5 +68,7 @@
     justify-content: space-between;
     align-items: center;
   }
-  
+  &_textCenter {
+    text-align: center;
+  }
 }
