--- a/assets/styles/pages/_contact.scss
+++ b/assets/styles/pages/_contact.scss
@@ -14,6 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 5px;
   }
   &_icon > a {
     color: var(--third-color);
