--- a/assets/styles/layout/_headerProfil.scss
+++ b/assets/styles/layout/_headerProfil.scss
@@ -45,6 +45,7 @@
     flex-direction: column;
     padding-top: 4rem;
     justify-items: center;
+    height: 100vh;
   }
 
   &_liens > div > a {
@@ -58,7 +59,6 @@
   }
   &_liens {
     text-align: center;
-    margin: auto;
     padding-top: var(--padding-lg);
     font-size: 16px;
   }
@@ -66,7 +66,6 @@
     display: flex;
     justify-content: center;
     gap: 1rem;
-    margin: auto;
     padding-top: var(--padding-lg);
     font-size: 16px;
   }
