--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -3,7 +3,18 @@
   color: var(--third-color);
   list-style: none;
   padding: var(--padding-md) 0 var(--padding-xs) 0;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  padding-bottom: 0;
+  margin-bottom: 0;
+
+  &_glitch {
+    background-color: white;
+    height: 60px;
+    box-shadow: inset 0px 15px 30px -10px rgba(50, 50, 93, 0.15);
+    border-top-left-radius: 50px;
+    border-top-right-radius: 50px;
+    padding: 0;
+    margin: 0;
+  }
 
   &_top {
     display: flex;
@@ -13,9 +24,10 @@
   &_logo > a {
     text-decoration: none;
     text-align: center;
-    font-family: var(--font-title);
+    font-family: "Corben", serif;
+    font-weight: 700;
+    font-style: normal;
     font-size: var(--font-size-lg);
-    text-shadow: 1px 1px 2px orange, 0 0 1em white, 0 0 0.2em orange;
     color: #efdcab;
   }
 
