--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -2,9 +2,10 @@
   background: var(--primary-color);
   color: var(--third-color);
   list-style: none;
-  padding: var(--padding-md) 0 var(--padding-xs) 0;
+  height: 60px;
   padding-bottom: 0;
   margin-bottom: 0;
+
 
   &_glitch {
     background-color: white;
@@ -19,6 +20,7 @@
   &_top {
     display: flex;
     justify-content: space-between;
+    padding-top: 10px
   }
 
   &_logo > a {
@@ -31,51 +33,70 @@
     color: #efdcab;
   }
 
-  &_searchbar {
-    margin-top: var(--padding-md);
-    display: flex;
-    align-items: center;
-    width: 100%;
-    max-width: 600px;
+  // &_searchbar {
+  //   margin-top: var(--padding-md);
+  //   display: flex;
+  //   align-items: center;
+  //   width: 100%;
+  //   max-width: 600px;
 
-    &_input {
-      width: 100%;
+  //   &_input {
+  //     width: 100%;
 
-      .form-control {
-        width: 100%;
-      }
-    }
-    .btn > a {
-      color: var(--third-color);
-      text-decoration: none;
-    }
+  //     .form-control {
+  //       width: 100%;
+  //     }
+  //   }
+  //   .btn > a {
+  //     color: var(--third-color);
+  //     text-decoration: none;
+  //   }
 
-    &_btn {
-      white-space: nowrap;
-      transform: scale(1.2);
-      margin-left: -10px;
-      border-radius: 50%;
-      box-shadow: var(--box-shadow);
-    }
-  }
+  //   &_btn {
+  //     white-space: nowrap;
+  //     transform: scale(1.2);
+  //     margin-left: -10px;
+  //     border-radius: 50%;
+  //     box-shadow: var(--box-shadow);
+  //   }
+  // }
 
-  &_profile > a {
-    color: var(--third-color);
-    font-family: var(--font-title);
+  // //    margin: auto;
+  //      color: var(--third-color);
+  //     font-family: var(--font-title);
+  //     display: flex;
+  //     flex-direction: row;
+  //     justify-content: center;
+  //     align-items: center;
+  //     gap: 10px;
+
+  &_img {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
+    border: 1px black solid;
+    padding-right: 5px;
+    border-radius: 10px;
+    // backgroud blanc faire attention pour le logo
   }
 
-  &_profile > a > img {
-    width: 50px;
-    border-radius: 50%;
-    text-align: center;
+  .connexion_btn {
     margin: auto;
-    box-shadow: var(--box-shadow);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 6px 14px;
+    font-family: -apple-system, BlinkMacSystemFont, "Roboto", sans-serif;
+    border-radius: 6px;
+    color: #3d3d3d;
+    background: #fff;
+    border: none;
+    box-shadow: 0px 0.5px 1px rgba(0, 0, 0, 0.1);
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
   }
+
+
 
   &_bottom {
     margin-top: var(--padding-sm);
