--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -21,6 +21,7 @@
 @import "layout/formContact";
 @import "layout/popup";
 @import "layout/footer";
+@import "layout/secLocation";
 
 /* Components */
 @import "components/card";
