--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -22,6 +22,7 @@
 @import "layout/popup";
 @import "layout/footer";
 @import "layout/secLocation";
+@import "layout/category";
 
 /* Components */
 @import "components/card";
