--- a/assets/styles/layout/_category.scss
+++ b/assets/styles/layout/_category.scss
@@ -1,18 +1,21 @@
 .category-grid {
+  justify-items: center;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   gap: 1.5rem;
-  padding: 1rem;
+  max-width: 1117px; /* limite max si tu veux */
+  margin: 0 auto; /* ça centre horizontalement */
+  place-items: center;
 }
 
 .categoryCard {
   background-color: #ffffff;
   border-radius: 1rem;
-  padding: 1rem;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
   text-align: center;
   transition: background-color 0.3s ease, transform 0.2s ease;
   cursor: pointer;
+  border: 1px #bfbfbf solid ;
 
   &:hover {
     background-color: #f3f4f6;
@@ -35,12 +38,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  
-  svg {
-      width: 30px;
-      height: 30px;
-    }
+
+  img {
+    width: 30px;
+    height: 30px;
+    margin: 2px;
+  }
 }
 .clee {
   background-color: #ef4444;
+  padding: 10px;
 }
