--- a/assets/styles/layout/_secLocation.scss
+++ b/assets/styles/layout/_secLocation.scss
@@ -10,7 +10,10 @@
   width: 100%;
   padding: 20px;
   box-sizing: border-box;
-
+  
+ @media (max-width: 768px) {
+   height: fit-content;// ou 1rem si t’es plus tight
+  }
   
   &_form {
     flex: 1;
