--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -23,6 +23,7 @@
 @import "layout/footer";
 @import "layout/secLocation";
 @import "layout/category";
+@import "layout/carMett";
 
 /* Components */
 @import "components/card";
