--- a/assets/styles/base.scss
+++ b/assets/styles/base.scss
@@ -24,6 +24,7 @@
 @import "layout/secLocation";
 @import "layout/category";
 @import "layout/carMett";
+@import "layout/event";
 
 /* Components */
 @import "components/card";
