--- a/assets/styles/layout/_header.scss
+++ b/assets/styles/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  background: var(--color-white);
+  background-color: #fff;
   color: var(--third-color);
   list-style: none;
   height: 60px;
