--- a/assets/styles/forms/_input.scss
+++ b/assets/styles/forms/_input.scss
@@ -23,27 +23,8 @@ input[type="date"] {
   display: inline-block !important;
   visibility: visible !important;
 }
-input[type="date"]:focus {
-  outline: none;
-  border: 1px solid #3498db;
-  background: #ecf0f1;
-}
 
-// input type time
 
-input[type="time"]::-webkit-clear-button {
-  display: none;
-}
-
-/* Removes the spin button */
-input[type="time"]::-webkit-inner-spin-button {
-  display: none;
-}
-
-/* Always display the drop down caret */
-input[type="time"]::-webkit-calendar-picker-indicator {
-  color: #2c3e50;
-}
 
 /* A few custom styles for date inputs */
 input[type="time"] {
@@ -55,14 +36,21 @@ input[type="time"] {
   padding: 5px;
   display: inline-block !important;
   visibility: visible !important;
-  
-}
-input[type="time"]:focus {
-  outline: none;
-  border: 1px solid #3498db;
-  background: #ecf0f1;
+
+  input[type="time"]:focus {
+    outline: none;
+    border: 1px solid #3498db;
+    background: #ecf0f1;
+  }
+
 }
 
+input[type="checkbox"] {
+  accent-color: #111;
+  cursor: pointer;
+  border-radius: 5px;
+  color: #000000;
+}
 
 .input {
   display: flex;
@@ -70,10 +58,4 @@ input[type="time"]:focus {
   gap: 10px;
   border-radius: 10px;
   padding: 5px;
-
-  &_time {
-    width: 50%;
-    padding-left: 10px;
-  }
-
 }
